3D Cursor surface projection onto hidden faces #94392
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
BlendFile
Interest
Blender Asset Bundle
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
USD
Interest
UV Editing
Interest
Undo
Interest
User Interface
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest
glTF
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
Windows
Platform
macOS
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#94392
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: macOS Monterey 12.1
Graphics card: Apple \M1
Blender Version
Broken: master, 3.0.0, 2.93, 2.92
Worked: 2.83.17 (
fb67495c7feb
)Short description of error
The 3D cursor surface projection is placing the cursor onto hidden faces when Orientation: Geometry is the chosen mode, but only when using the 3D cursor tool with left click.
Exact steps for others to reproduce the error
The cursor is placed as if the hidden face was visible.
I expect it to ignore the hidden face and be placed somewhere behind, just as described in this related report: #70606
In fact it works as expected when using shift+rightclick (with any tool). The left click function of the dedicated cursor tool seems to have not received the earlier fixes, unless I'm misunderstanding something. If this discrepancy is intended then it is not clear to me why (sorry).
Edit: the shift+rightclick function uses the Orientation: View setting regardless of the selection in the cursor tool, so that must explain why it does not exhibit the same behavior.
{F12776349, size=full}
Added subscriber: @tem
Added subscriber: @PratikPB2123
Changed status from 'Needs Triage' to: 'Confirmed'
Thanks for the report. Looks like a regression (Works fine here on 2.83.17)
This issue was referenced by
cd804fb2e9
This issue was referenced by
8189471912
Changed status from 'Confirmed' to: 'Resolved'